# grpctest_rust

./: Cargo.toml  build.rs
schemas/: test.proto  test_service.rs
src/: main.rs  test_service.rs
