[package]
name = "grpctest_rust"
version = "0.1.0"
authors = ["Anil Halil <anil.halil@globalmaksimum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["rt", "rt-multi-thread"] }
tokio-stream = "0.1.3"
futures = "0.3"
futures-util = "0.3"
tonic = "0.4"
prost = "0.7"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.4"
